name:                   smartbox
version:                0.1.0.0
synopsis:               SmartOS Box Tools
homepage:               http://dysinger.net
license:                OtherLicense
author:                 Tim Dysinger
maintainer:             tim@dysinger.net
category:               System
build-type:             Simple
cabal-version:          >= 1.14.0

executable              smartbox
  main-is:              Main.hs
  default-language:     Haskell2010
  ghc-options:          -O2
                        -Wall -fno-warn-type-defaults -fno-warn-unused-do-bind
                        -rtsopts -threaded -static
  default-extensions:   DeriveDataTypeable
                        ExistentialQuantification
                        ExtendedDefaultRules
                        OverloadedStrings
                        RankNTypes
                        RecordWildCards
                        ScopedTypeVariables
  build-depends:        base == 4.5.1.0
                      , aeson
                      , base16-bytestring
                      , bytestring
                      , cereal
                      , cmdargs
                      , conduit
                      , containers
                      , crypto-conduit
                      , directory
                      , filepath
                      , http-conduit
                      , pureMD5
                      , shelly
                      , text
                      , transformers
