name:                   box
version:                0.1.0.0
synopsis:               Box Management
homepage:               http://dysinger.net
license:                OtherLicense
author:                 Tim Dysinger
maintainer:             tim@dysinger.net
category:               System
build-type:             Simple
cabal-version:          >= 1.14.0

executable              box
  main-is:              Main.hs
  default-language:     Haskell2010
  ghc-options:          -O2
                        -Wall -fno-warn-type-defaults -fno-warn-unused-do-bind
                        -rtsopts -threaded -static
  default-extensions:   BangPatterns
                        DeriveDataTypeable
                        ExistentialQuantification
                        ExtendedDefaultRules
                        OverloadedStrings
                        RankNTypes
                        RecordWildCards
                        ScopedTypeVariables
                        TemplateHaskell
  build-depends:        base == 4.5.1.0
                      , aeson
                      , cereal
                      , cmdargs
                      , containers
                      , directory
                      , filepath
                      , hdaemonize
                      , hsyslog
                      , pureMD5
                      , remote
                      , shelly
                      , transformers
                     -- bytestring
                      , bytestring
                      , base16-bytestring
                      , base64-bytestring
                     -- text
                      , text
                      , text-icu
                     -- conduit
                      , conduit
                      , crypto-conduit
                      , http-conduit
                      , libssh2-conduit
