name:                   box
version:                0.1
synopsis:               Box Management
homepage:               http://dysinger.net
license:                OtherLicense
author:                 Tim Dysinger
maintainer:             tim@dysinger.net
category:               System
build-type:             Simple
cabal-version:          >=1.16

executable              box
  default-language:     Haskell2010
  default-extensions:   BangPatterns
                        DeriveDataTypeable
                        ExtendedDefaultRules
                        OverloadedStrings
                        RankNTypes
                        RecordWildCards
                        TemplateHaskell
  ghc-options:          -Wall
                        -fllvm
                        -rtsopts
                        -static
                        -threaded
  hs-source-dirs:       src
  main-is:              Main.hs
  build-depends:        base >=4.6
                      , aeson
                      , cereal
                      , cmdargs
                      , containers
                      , directory
                      , filepath
                      , hdaemonize
                      , hsyslog
                      , old-time
                      , pureMD5
                      , remote
                      , shelly
                      , transformers
                     -- bytestring
                      , bytestring
                      , base16-bytestring
                      , base64-bytestring
                     -- text
                      , text
                      , text-icu
                     -- conduit
                      , conduit
                      , crypto-conduit
                      , http-conduit
                   -- , libssh2-conduit
