name:                smartbox
version:             0.1.0.0
synopsis:            SmartOS VirtualBox CLI
homepage:            http://dysinger.net
license:             MIT
license-file:        LICENSE
author:              Tim Dysinger
maintainer:          tim@dysinger.net
category:            System
build-type:          Simple
cabal-version:       >= 1.8

executable smartbox
  main-is:           smartbox.hs
  build-depends:     base == 4.5.1.0
                   , HSH
                   , base16-bytestring
                   , bytestring
                   , cereal
                   , conduit
                   , containers
                   , crypto-conduit
                   , directory
                   , filepath
                   , http-conduit
                   , optparse-applicative
                   , pureMD5
                   , text
                   , transformers
